--- a/template.html
+++ b/template.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="./assets/css/bem-css.css">
 </head>
 <body>
+
+    <!-- headings -->
     <h1>This is a heading H1</h1>
     <h2>This is a heading H2</h2>
     <h3>This is a heading H3</h3>
     <h4>This is a heading H4</h4>
     <h5>This is a heading H5</h5>
     <h6>This is a heading H6</h6>
+
+    <!-- paragraphs -->
+    <p>This is a paragraph and will be the standard text of the page</p>
 </body>
 </html>
