--- a/card.html
+++ b/card.html
@@ -10,18 +10,47 @@
   <body>
     <!-- card -->
     <div class="card">
-    	<div class="card__image-container">
-			<figure class="card__image">
-				<img src="https://via.placeholder.com/350x250" alt="placeholder image" />
-			</figure>
-    	</div>
-        <div class="card__content">
-            <div class="card__content-container">
-				<h5 class="card__title">Card Title</h5>
-				<p class="card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque dignissimos rem accusantium ullam. Quasi repellat ab delectus tempora et perferendis facilis, commodi atque veritatis aut.</p>
-				<button class="button button--blue">Blue Button</button>
-            </div>
+      <div class="card__image-container">
+        <figure class="card__image">
+          <img
+            src="https://via.placeholder.com/1200x600"
+            alt="placeholder image"
+          />
+        </figure>
+      </div>
+      <div class="card__content">
+        <div class="card__content-container">
+          <h5 class="card__title">Card Title</h5>
+          <p class="card__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+            dignissimos rem accusantium ullam. Quasi repellat ab delectus
+            tempora et perferendis facilis, commodi atque veritatis aut.
+          </p>
+          <button class="button button--blue">Blue Button</button>
         </div>
+      </div>
+    </div>
+    <!-- card -->
+    <div class="card-dark">
+      <div class="card__image-container">
+        <figure class="card__image">
+          <img
+            src="https://via.placeholder.com/1200x600"
+            alt="placeholder image"
+          />
+        </figure>
+      </div>
+      <div class="card__content">
+        <div class="card__content-container">
+          <h5 class="card__title">Card Title</h5>
+          <p class="card__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+            dignissimos rem accusantium ullam. Quasi repellat ab delectus
+            tempora et perferendis facilis, commodi atque veritatis aut.
+          </p>
+          <button class="button button--blue">Blue Button</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
