--- a/grid.html
+++ b/grid.html
@@ -6,20 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BEM-CSS Buttons</title>
     <link rel="stylesheet" href="./assets/css/bem-css.css">
+    <style>
+        div {
+            background-color: #95a5a6;
+            margin: 5px 0;
+            height: 45px;
+            border-radius: 4px;
+        }
+        span {
+            display: inline-flex;
+            background-color: #95a5a6;
+            margin: 5px 0;
+            height: 45px;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
-    <div class="grid-1" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 1 grid section</div>
-    <div class="grid-2" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 2 grid sections</div>
-    <div class="grid-3" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 3 grid sections</div>
-    <div class="grid-4" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 4 grid sections</div>
-    <div class="grid-5" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 5 grid sections</div>
-    <div class="grid-6" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 6 grid sections</div>
-    <div class="grid-7" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 7 grid sections</div>
-    <div class="grid-8" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 8 grid sections</div>
-    <div class="grid-9" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 9 grid sections</div>
-    <div class="grid-10" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 10 grid sections</div>
-    <div class="grid-11" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 11 grid sections</div>
-    <div class="grid-12" style="display: block; background-color: #95a5a6; margin: 5px 0;">This is 12 grid sections</div>
+    <div class="grid-1">This is 1 grid section</div>
+    <div class="grid-2">This is 2 grid sections</div>
+    <div class="grid-3">This is 3 grid sections</div>
+    <div class="grid-4">This is 4 grid sections</div>
+    <div class="grid-5">This is 5 grid sections</div>
+    <div class="grid-6">This is 6 grid sections</div>
+    <div class="grid-7">This is 7 grid sections</div>
+    <div class="grid-8">This is 8 grid sections</div>
+    <div class="grid-9">This is 9 grid sections</div>
+    <div class="grid-10">This is 10 grid sections</div>
+    <div class="grid-11">This is 11 grid sections</div>
+    <div class="grid-12">This is 12 grid sections</div>
+
+    <span class="grid-1">Grid 1</span>
+    <span class="grid-3">Grid 3</span>
+    <span class="grid-6">Grid 6</span>
     
 </body>
 </html>
